objects/ASI_CRM_Event_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Event Evaluations</relationshipLabel>
        <relationshipName>Event_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Event_ID__c</fullName>
        <formula>ASI_CRM_CN_eventoutlet__r.ASI_MFM_Event__r.ASI_MFM_Event_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Evaluations</relationshipLabel>
        <relationshipName>Event_Evaluation_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Status__c</fullName>
        <formula>IF( ASI_CRM_CN_totalmkt__c&gt;0||  ASI_CRM_CN_totalsales__c&gt;0 || ASI_CRM_CN_totalpg__c&gt;0 ,&apos;已評估&apos;,&apos;未評估&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_amountofgifts__c</fullName>
        <label>礼品数量</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_consumerinteractcontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_consumerinteraction__c</fullName>
        <label>消费者互动</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_content__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_creativitycontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_display__c</fullName>
        <label>现场陈列吸引度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_displaycontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_earlystage_communication__c</fullName>
        <label>前期沟通</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eventcoordinatecontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eventcoordination__c</fullName>
        <label>活动执行</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eventcreativity__c</fullName>
        <label>活动创意</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eventdisplay__c</fullName>
        <label>活动搭建</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eventdisplaycontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eventoutlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Outlet</label>
        <referenceTo>ASI_MFM_Event_Outlet__c</referenceTo>
        <relationshipName>Event_Evaluation_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eventpercontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_eventperformance__c</fullName>
        <label>活动表演</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_giftamountcontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_giftsatisfactcontentpg__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_giftsatisfactioncontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_interaction__c</fullName>
        <label>互动喜好度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_interactioncontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_perform2content__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_performance2__c</fullName>
        <label>表演喜好度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_performance__c</fullName>
        <label>活动环节吸引度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_performcontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_promotecontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_promotion__c</fullName>
        <label>促销机制</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_satisfaction_of_gift__c</fullName>
        <label>礼品满意度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_satisfaction_of_gift_pg__c</fullName>
        <label>礼品满意度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_storecommucontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_storecommunication__c</fullName>
        <label>店内沟通</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_topic__c</fullName>
        <label>活动主题吸引度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_topiccontent__c</fullName>
        <label>具体内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_totalmkt__c</fullName>
        <formula>VALUE(TEXT(ASI_CRM_CN_earlystage_communication__c))+VALUE(TEXT( ASI_CRM_CN_eventcreativity__c ))+VALUE(TEXT( ASI_CRM_CN_eventdisplay__c ))+VALUE(TEXT( ASI_CRM_CN_consumerinteraction__c ))+VALUE(TEXT( ASI_CRM_CN_eventperformance__c ))+VALUE(TEXT( ASI_CRM_CN_eventcoordination__c ))+VALUE(TEXT( ASI_CRM_CN_satisfaction_of_gift__c ))+VALUE(TEXT( ASI_CRM_CN_amountofgifts__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>总分</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_totalpg__c</fullName>
        <formula>VALUE(TEXT( ASI_CRM_CN_topic__c ))+VALUE(TEXT( ASI_CRM_CN_performance__c ))+VALUE(TEXT( ASI_CRM_CN_display__c ))+VALUE(TEXT( ASI_CRM_CN_interaction__c ))+VALUE(TEXT( ASI_CRM_CN_performance2__c ))+VALUE(TEXT( ASI_CRM_CN_satisfaction_of_gift_pg__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>总分</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_totalsales__c</fullName>
        <formula>VALUE(TEXT( ASI_CRM_CN_storecommunication__c ))+VALUE(TEXT( ASI_CRM_CN_eventcoordination__c ))+VALUE(TEXT( ASI_CRM_CN_promotion__c ))+VALUE(TEXT( ASI_CRM_CN_eventperformance__c ))+VALUE(TEXT( ASI_CRM_CN_satisfaction_of_gift__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>总分</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Event_End_Date__c</fullName>
        <formula>ASI_CRM_CN_eventoutlet__r.ASI_MFM_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Event_Name__c</fullName>
        <formula>ASI_CRM_CN_eventoutlet__r.ASI_MFM_Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Event_Start_Date__c</fullName>
        <formula>ASI_CRM_CN_eventoutlet__r.ASI_MFM_Beginning_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Local_Update_Time__c</fullName>
        <label>Local_Update_Time</label>
        <type>DateTime</type>
    </fields>
    <label>Event Evaluation</label>
    <listViews>
        <fullName>ASI_CRM_CN_All_Event_Evaluations</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All CN Event Evaluations</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_All_Event_Evaluations_Comp</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_CN_totalmkt__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalsales__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalpg__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All CN Event Evaluations Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_All_Event_Evaluations_Out</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_CRM_CN_totalmkt__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalsales__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalpg__c</field>
            <operation>equals</operation>
        </filters>
        <label>All CN Event Evaluations Outstanding</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_My_Event_Evaluations</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My CN Event Evaluations</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_My_Event_Evaluations_Comp</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_CRM_CN_totalmkt__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalsales__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalpg__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>My CN Event Evaluations Completed</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_My_Event_Evaluations_Out</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ASI_CRM_CN_totalmkt__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalsales__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalpg__c</field>
            <operation>equals</operation>
        </filters>
        <label>My CN Event Evaluations Outstanding</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_PG_Event_Evaluations</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Event_Evaluation__c.ASI_CRM_CN_PG_Event_Evaluation_Form</value>
        </filters>
        <label>PG CN Event Evaluations</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_PG_Event_Evaluations_Comp</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Event_Evaluation__c.ASI_CRM_CN_PG_Event_Evaluation_Form</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalpg__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>PG CN Event Evaluations Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_PG_Event_Evaluations_Out</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Event_Evaluation__c.ASI_CRM_CN_PG_Event_Evaluation_Form</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalpg__c</field>
            <operation>equals</operation>
        </filters>
        <label>PG CN Event Evaluations Outstanding</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_RTMK_Event_Evaluations</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Event_Evaluation__c.ASI_CRM_CN_RTMTK</value>
        </filters>
        <label>RTMK CN Event Evaluations</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_RTMK_Event_Evaluations_Comp</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Event_Evaluation__c.ASI_CRM_CN_RTMTK</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalmkt__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>RTMK CN Event Evaluations Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_RTMK_Event_Evaluations_Out</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Event_Evaluation__c.ASI_CRM_CN_RTMTK</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalmkt__c</field>
            <operation>equals</operation>
        </filters>
        <label>RTMK CN Event Evaluations Outstanding</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Sales_Event_Evaluations</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Event_Evaluation__c.ASI_CRM_CN_sales_evaluation</value>
        </filters>
        <label>Sales CN Event Evaluations</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Sales_Event_Evaluations_Comp</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Event_Name__c</columns>
        <columns>ASI_CRM_CN_Customer__c</columns>
        <columns>ASI_CRM_Event_Start_Date__c</columns>
        <columns>ASI_CRM_Event_End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Event_Evaluation__c.ASI_CRM_CN_sales_evaluation</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_totalsales__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Sales CN Event Evaluations Completed</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_CN_Admin</group>
            <group>ASI_CRM_CN_NTMK</group>
            <group>ASI_CRM_CN_RTMK_GC</group>
            <group>ASI_CRM_CN_RTMK_GN</group>
            <group>ASI_CRM_CN_RTMK_GS</group>
        </sharedTo>
    </listViews>
</CustomObject>